<resources>
    <string name="app_name">CS496AndroidUI</string>
    <string name="action_settings">Settings</string>
    <string name="horizontal_btn">Horizontal Layout</string>
    <string name="vertical_btn">Vertical Layout</string>
    <string name="grid_btn">Grid Layout</string>
    <string name="relative_btn">Relative Layout</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
</resources>
